--- a/index.html
+++ b/index.html
@@ -49,8 +49,10 @@
 		<p class="muitoimportante">Bem vindo ao nosso sistema</p>
 		<p id="nomedousuario">USUÁRIO</p>
 		<form>
-		   <label for="nomedousuario">Login:</label></br>
-		   <input type="text" id="nomedousuario"></input>
+			<label for="email">Email;</label><br>
+			<input type="text" id="Email"></input>
+		   <label for="Usuário">Login:</label></br>
+		   <input type="text" id="Usuário"></input>
 		</form>
 	</body>
 </html>
