--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
 	   <style>
 	      body {
-		    background-image: url("https://wallpaper.dog/large/20458921.png");
+		    background-image: url("https://www.10wallpaper.com/wallpaper/1920x1200/1506/3d_black_polygons-High_Quality_HD_Wallpaper_1920x1200.jpg");
 		  }
 		  
 		  form {
@@ -48,9 +48,6 @@
 		<h1>Aula Sobre CSS</h1>
 		<p class="muitoimportante">Bem vindo ao nosso sistema</p>
 		<p id="nomedousuario">USUÁRIO</p>
-		<form>
-		   <label for="Usuário">Login:</label></br>
-		   <input type="text" id="Usuário"></input>
-		</form>
+	
 	</body>
 </html>
